--- a/portfolio.html
+++ b/portfolio.html
@@ -80,12 +80,20 @@
 
           <ul class="list portfolio-items">
             <li class="portfolio-list">
-              <a class="portfolio-item link" href="./portfolio.html"
-                ><img
-                  src="./images/banking-app.jpg"
-                  alt="banking app interface"
-                  width="360"
-                  height="300" />
+              <a class="portfolio-item link" href="./portfolio.html">
+                <div class="team-list-wrapper">
+                  <img
+                    src="./images/banking-app.jpg"
+                    alt="banking app interface"
+                    width="360"
+                    height="300" />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+
                 <div class="card-description-portfolio">
                   <h3 class="section-subtitle">
                     Banking App Interface Concept
@@ -95,12 +103,20 @@
               </a>
             </li>
             <li class="portfolio-list">
-              <a class="portfolio-item link" href="./portfolio.html"
-                ><img
-                  src="./images/cashless-payment.jpg"
-                  alt="cashless payment"
-                  width="360"
-                  height="300" />
+              <a class="portfolio-item link" href="./portfolio.html">
+                <div class="team-list-wrapper">
+                  <img
+                    src="./images/cashless-payment.jpg"
+                    alt="cashless payment"
+                    width="360"
+                    height="300" />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+
                 <div class="card-description-portfolio">
                   <h3 class="section-subtitle">Cashless Payment</h3>
                   <p class="section-text">Marketing</p>
@@ -108,12 +124,20 @@
               </a>
             </li>
             <li class="portfolio-list">
-              <a class="portfolio-item link" href="./portfolio.html"
-                ><img
-                  src="./images/meditation-app.jpg"
-                  alt="meditation app"
-                  width="360"
-                  height="300" />
+              <a class="portfolio-item link" href="./portfolio.html">
+                <div class="team-list-wrapper">
+                  <img
+                    src="./images/meditation-app.jpg"
+                    alt="meditation app"
+                    width="360"
+                    height="300" />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+
                 <div class="card-description-portfolio">
                   <h3 class="section-subtitle">Meditation App</h3>
                   <p class="section-text">App</p>
@@ -121,12 +145,20 @@
               </a>
             </li>
             <li class="portfolio-list">
-              <a class="portfolio-item link" href="./portfolio.html"
-                ><img
-                  src="./images/taxi-service.jpg"
-                  alt="taxi service"
-                  width="360"
-                  height="300" />
+              <a class="portfolio-item link" href="./portfolio.html">
+                <div class="team-list-wrapper">
+                  <img
+                    src="./images/taxi-service.jpg"
+                    alt="taxi service"
+                    width="360"
+                    height="300" />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+
                 <div class="card-description-portfolio">
                   <h3 class="section-subtitle">Taxi Service</h3>
                   <p class="section-text">Marketing</p>
@@ -134,12 +166,20 @@
               </a>
             </li>
             <li class="portfolio-list">
-              <a class="portfolio-item link" href="./portfolio.html"
-                ><img
-                  src="./images/screen-illustrations.jpg"
-                  alt="screen illustrations"
-                  width="360"
-                  height="300" />
+              <a class="portfolio-item link" href="./portfolio.html">
+                <div class="team-list-wrapper">
+                  <img
+                    src="./images/screen-illustrations.jpg"
+                    alt="screen illustrations"
+                    width="360"
+                    height="300" />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+
                 <div class="card-description-portfolio">
                   <h3 class="section-subtitle">Screen Illustrations</h3>
                   <p class="section-text">Design</p>
@@ -147,12 +187,20 @@
               </a>
             </li>
             <li class="portfolio-list">
-              <a class="portfolio-item link" href="./portfolio.html"
-                ><img
-                  src="./images/online-courses.jpg"
-                  alt="online courses"
-                  width="360"
-                  height="300" />
+              <a class="portfolio-item link" href="./portfolio.html">
+                <div class="team-list-wrapper">
+                  <img
+                    src="./images/online-courses.jpg"
+                    alt="online courses"
+                    width="360"
+                    height="300" />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+
                 <div class="card-description-portfolio">
                   <h3 class="section-subtitle">Online Courses</h3>
                   <p class="section-text">Marketing</p>
@@ -160,12 +208,20 @@
               </a>
             </li>
             <li class="portfolio-list">
-              <a class="portfolio-item link" href="./portfolio.html"
-                ><img
-                  src="./images/instagram-stories.jpg"
-                  alt="instagram stories"
-                  width="360"
-                  height="300" />
+              <a class="portfolio-item link" href="./portfolio.html">
+                <div class="team-list-wrapper">
+                  <img
+                    src="./images/instagram-stories.jpg"
+                    alt="instagram stories"
+                    width="360"
+                    height="300" />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+
                 <div class="card-description-portfolio">
                   <h3 class="section-subtitle">Instagram Stories Concept</h3>
                   <p class="section-text">Design</p>
@@ -173,12 +229,20 @@
               </a>
             </li>
             <li class="portfolio-list">
-              <a class="portfolio-item link" href="./portfolio.html"
-                ><img
-                  src="./images/organic-food.jpg"
-                  alt="organic food"
-                  width="360"
-                  height="300" />
+              <a class="portfolio-item link" href="./portfolio.html">
+                <div class="team-list-wrapper">
+                  <img
+                    src="./images/organic-food.jpg"
+                    alt="organic food"
+                    width="360"
+                    height="300" />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+
                 <div class="card-description-portfolio">
                   <h3 class="section-subtitle">Organic Food</h3>
                   <p class="section-text">Web Site</p>
@@ -186,12 +250,20 @@
               </a>
             </li>
             <li class="portfolio-list">
-              <a class="portfolio-item link" href="./portfolio.html"
-                ><img
-                  src="./images/fresh-coffee.jpg"
-                  alt="a cup of coffe"
-                  width="360"
-                  height="300" />
+              <a class="portfolio-item link" href="./portfolio.html">
+                <div class="team-list-wrapper">
+                  <img
+                    src="./images/fresh-coffee.jpg"
+                    alt="a cup of coffe"
+                    width="360"
+                    height="300" />
+                  <p class="overlay">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+
                 <div class="card-description-portfolio">
                   <h3 class="section-subtitle">Fresh Coffee</h3>
                   <p class="section-text">Web Site</p>
